Add ganglia-monitor-python and fix up gmond.conf templates

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,6 +1,8 @@
 ---
 - name: Install ganglia-monitor
   apt: name=ganglia-monitor
+- name: Install ganglia-monitor-python
+  apt: name=ganglia-monitor-python
 - name: Configure gmond.conf 
   template: 
       src=default_gmond.conf.j2 
