Add monitor-fd-and-sockets tasks

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -6,7 +6,11 @@ galaxy_info:
     platforms:
     - name: Ubuntu
       versions:
-      - lucid
+      - trusty
+      - utopic
+      - vivid
+      - wily
     categories:
-    - system
+      - system
+      - monitoring
 dependencies: []
